--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.17",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "@next/font": "^13.4.12",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
